--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,7 +1,15 @@
-<ul style="text-align:center">
-  <li style="text-align:center" class="data-container">  <button (click)="play()">
-    play
-  </button>
+<app-loading *ngIf="showLoading"></app-loading>
+<app-game (backToMenu)="onBackToMenu()" [singlePlayer]="false" [token]="token" *ngIf="showMultiPlayer"></app-game>
+<app-game (backToMenu)="onBackToMenu()" [singlePlayer]="true" [token]="token" *ngIf="showSinglePlayer"></app-game>
+<app-leaderboard (backToMenu)="onBackToMenu()" [token]="token" *ngIf="showLeaderBoard"></app-leaderboard>
+<ul style="text-align:center" *ngIf="!showLeaderBoard && !showMultiPlayer && !showLoading && !showSinglePlayer">
+  <li style="text-align:center" class="data-container">
+    <button (click)="singlePlayer()">
+      single player
+    </button>
+    <button (click)="multiPlayer()">
+      multi player
+    </button>
   <button (click)="scores()">
     scores
   </button>
