Multi player is working now.

--- a/frontend/src/app/home/game/game.component.html
+++ b/frontend/src/app/home/game/game.component.html
@@ -1,7 +1,7 @@
 <ul class="vertical-data-container">
   <li class="text-container"> <label>{{showMessage}}</label></li>
   <li class="game-area">
-    <canvas #sideScreen *ngIf="!singlePlayer" class="race-canvas"></canvas>
+    <canvas #sideScreen class="race-canvas"></canvas>
     <canvas #mainScreen class="main-canvas"></canvas>
   </li>
   <li class="progress-container">
