--- a/frontend/src/app/home/loading/loading.component.html
+++ b/frontend/src/app/home/loading/loading.component.html
@@ -1,4 +1,4 @@
-<ul style="text-align:center">
+<ul style="text-align:center" class="parent-data-container">
   <li style="text-align:center" class="data-container">
     <label>
       {{showMessage}}
