--- a/frontend/src/app/registering/login/login.component.html
+++ b/frontend/src/app/registering/login/login.component.html
@@ -1,5 +1,5 @@
-<ul style="text-align:center">
-  <li style="text-align:center" class="data-container">
+<ul class="data-container">
+  <li class="data-container">
     <input type="text" placeholder="name"
            class="small-input"
            [ngClass]="{'failed': logInFailed}"
