--- a/frontend/src/app/home/leaderboard/leaderboard.component.css
+++ b/frontend/src/app/home/leaderboard/leaderboard.component.css
@@ -6,6 +6,19 @@
   align-content: center;
 }
 
+.horizontal-data-container {
+   display: flex;
+   flex-direction: column;
+   flex-flow: wrap;
+   justify-content: space-around;
+   align-content: center;
+  width: 80%;
+ }
+
+.uniform-label {
+  width: 20%;
+}
+
 .btn-container {
   display: flex;
   flex-direction: column;
