--- a/frontend/src/app/registering/login/login.component.css
+++ b/frontend/src/app/registering/login/login.component.css
@@ -1,4 +1,4 @@
-.vertical-data-container {
+.data-container {
   display: flex;
   flex-direction: row;
   flex-flow: wrap;
@@ -11,5 +11,5 @@
 }
 
 .small-input {
-  width: 40%;
+  width: 20%;
 }
