--- a/frontend/src/app/registering/register/register.component.html
+++ b/frontend/src/app/registering/register/register.component.html
@@ -1,4 +1,4 @@
-<ul style="text-align:center">
+<ul style="text-align:center" class="data-container">
   <li style="text-align:center" class="data-container">
     <input type="text" placeholder="name"
            class="small-input"
