--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,10 @@
+<div [ngClass]="{'bg-1': bgIndex == 0,
+'bg-2': bgIndex == 1,
+'bg-3': bgIndex == 2,
+'bg-4': bgIndex == 3,
+'bg-5': bgIndex == 4,
+'bg-6': bgIndex == 5
+}">
 <app-home (loggedOut)="logOut()" [token]="token" *ngIf="loggedIn"></app-home>
 <app-registering (loggedIn)="logIn($event)" *ngIf="!loggedIn"></app-registering>
+</div>
